--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <nav>
             <ul>
                 <li>Opciones de menú cambiadas y otras</li>
+                <li>Nueva funcionalidad</li>
             </ul>
         </nav>
     </header>
